@@ -392,6 +392,7 @@ stdWindowProperties =
         [xrc:p="o"] element focused {_, t_bool }* &
         [xrc:p="o"] element hidden  {_, t_bool }* &
         [xrc:p="o"] element tooltip {_, t_text }* &
+        [xrc:p="o"] element variant {_, t_variant }* &
         [xrc:p="o"] element font    {_, t_font }* &
         [xrc:p="o"] element ownfont {_, t_font }* &
         [xrc:p="o"] element help    {_, t_text }*
@@ -446,6 +447,8 @@ t_font       = (
                    [xrc:p="o"] element inherit      {_, t_bool }* &
                    [xrc:p="o"] element relativesize {_, t_float }*
                )
+
+t_variant    = "normal" | "small" | "mini" | "large"
 
 t_imagelist  = (
                    [xrc:p="o"] element mask {_, t_bool }* &
