@@ -588,6 +588,7 @@ All (GUI):
 - Add wxGenericListCtrl::EndEditLabel() (Tim Kosse).
 - Implement bounding box computation in wxGCDC (Toni Ruža).
 - Fix saving GIF animations with 2.5s+ delays between frames (elvissteinjr).
+- Add "variant" property to windows in XRC.
 
 wxGTK:
 
